--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -20,6 +20,9 @@ builds:
       - linux
       - windows
 
+release:
+  target_commitish: '{{ .Commit }}'
+
 archives:
   - format: tar.gz
     # this name template makes the OS and Arch compatible with the results of `uname`.
@@ -35,9 +38,15 @@ archives:
       - goos: windows
         format: zip
 
+checksum:
+  name_template: 'checksums.txt'
+snapshot:
+  name_template: "{{ incpatch .Version }}-next"
+
 changelog:
   sort: asc
   filters:
     exclude:
       - "^docs:"
+      - "^.github:"
       - "^test:"
